--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <!-- Balises pour WhatsApp, Facebook, LinkedIn -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="file:///C:/Users/william.ananfack/OneDrive%20-%20Acetum%20SpA/Desktop/tontine-pour-tous/index.html">
+    <meta property="og:url" content="https://vercel.com/ananfack-williams-projects/landing-page">
     <meta property="og:title" content="Tontine Pour Tous - Gérez votre tontine sur mobile">
     <meta property="og:description" content="La solution n°1 pour les présidents de tontines. Rapports WhatsApp instantanés.">
-    <meta property="og:image" content="file:///C:/Users/william.ananfack/OneDrive%20-%20Acetum%20SpA/Desktop/tontine-pour-tous/index.html"> <!-- REMPLACER PAR VOTRE URL D'IMAGE -->
+    <meta property="og:image" content="https://vercel.com/ananfack-williams-projects/landing-page"> <!-- REMPLACER PAR VOTRE URL D'IMAGE -->
 
     <!-- Balises pour Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -298,4 +298,5 @@
     </footer>
 
 </body>
+
 </html>
