--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta property="og:url" content="https://vercel.com/ananfack-williams-projects/landing-page">
     <meta property="og:title" content="Tontine Pour Tous - Gérez votre tontine sur mobile">
     <meta property="og:description" content="La solution n°1 pour les présidents de tontines. Rapports WhatsApp instantanés.">
-    <meta property="og:image" content="https://vercel.com/ananfack-williams-projects/landing-page"> <!-- REMPLACER PAR VOTRE URL D'IMAGE -->
+    <meta property="og:image" content="https://landing-page-nine-rouge-25.vercel.app/og-image.jpg
+"> <!-- REMPLACER PAR VOTRE URL D'IMAGE -->
 
     <!-- Balises pour Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -300,3 +301,4 @@
 </body>
 
 </html>
+
