--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     <a href="#pricing" class="text-gray-600 hover:text-cyan-600 px-3 py-2 font-medium">Tarifs</a>
                     <a href="#faq" class="text-gray-600 hover:text-cyan-600 px-3 py-2 font-medium">FAQ</a>
                 </div>
-                <a href="https://njangihub-miiseeray-ananfack-williams-projects.vercel.app/" target="_blank" rel="noopener noreferrer" class="bg-cyan-600 text-white px-5 py-2 rounded-full font-bold hover:bg-cyan-700 transition">Essayer Gratuitement</a>
+                <a href="https://wa.me/39329963943?text=Bonjour%2C%20je%20souhaite%20en%20savoir%20plus%20sur%20Tontine%20Pour%20Tous.
+" target="_blank" rel="noopener noreferrer" class="bg-cyan-600 text-white px-5 py-2 rounded-full font-bold hover:bg-cyan-700 transition">Essayer Gratuitement</a>
             </div>
         </div>
     </nav>
@@ -301,4 +302,5 @@
 </body>
 
 </html>
+
 
