--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@
             </div>
         </div>
     </section>
+<a href="https://wa.me/39329963943?text=Bonjour%2C%20je%20souhaite%20en%20savoir%20plus%20sur%20Tontine%20Pour%20Tous."
+   target="_blank"
+   class="bg-green-500 text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-green-600 transition">
+   <i class="fab fa-whatsapp mr-2"></i> Contacter sur WhatsApp
+</a>
 
     <!-- FOOTER -->
     <footer class="py-12 px-4 bg-white border-t text-center">
@@ -302,6 +307,7 @@
 </body>
 
 </html>
+
 
 
 
