--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- SCRIPT GOOGLE ANALYTICS (GA4) -->
     <!-- Remplacez G-XXXXXXXXXX par votre ID réel obtenu sur Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=13294691853"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -307,6 +307,7 @@
 </body>
 
 </html>
+
 
 
 
