--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
             </h1>
             <p class="text-xl md:text-2xl mb-12 text-cyan-50 opacity-90 leading-relaxed">
                 L'outil complet pour les présidents : rapports <strong>instantanés</strong> et lien de consultation sécurisé pour vos membres.
-            </p>
+            </p><div class="mt-12 flex justify-center">
+  <img 
+    src="/app-preview.png"
+    alt="Aperçu de l'application Tontine Pour Tous"
+    class="rounded-2xl shadow-2xl w-full max-w-md md:max-w-lg"
+  >
+</div>
+
             <div class="flex flex-col sm:flex-row justify-center gap-5">
                 <a href="https://tontine-pour-tous-pqfl.vercel.app" target="_blank" class="bg-yellow-400 text-cyan-900 px-10 py-5 rounded-2xl font-bold text-xl hover:bg-yellow-300 transition-all transform hover:scale-105 shadow-xl">
                     Démarrer Gratuitement
@@ -300,3 +307,4 @@
 
 </body>
 </html>
+
