--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
   <img 
     src="/app-preview.png"
     alt="Aperçu de l'application Tontine Pour Tous"
-    class="rounded-2xl shadow-2xl w-full max-w-md md:max-w-lg"
+    class="rounded-2xl shadow-xl w-full max-w-sm md:max-w-md"
   >
 </div>
+
 
             <div class="flex flex-col sm:flex-row justify-center gap-5">
                 <a href="https://tontine-pour-tous-pqfl.vercel.app" target="_blank" class="bg-yellow-400 text-cyan-900 px-10 py-5 rounded-2xl font-bold text-xl hover:bg-yellow-300 transition-all transform hover:scale-105 shadow-xl">
@@ -307,4 +308,5 @@
 
 </body>
 </html>
+
 
