--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Digitalisez votre tontine avec Tontine Pour Tous. Générez des rapports complets à partager sur WhatsApp ou à imprimer pour vos membres.">
     <meta property="og:title" content="Tontine Pour Tous">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tontine-pour-tous-c240hyfhi-ananfack-williams-projects.vercel.app/">
+    <meta property="og:url" content="https://tontine-pour-tous.vercel.app/">
     <meta property="og:image" content="app-preview.png">
 
     <!-- Google Analytics (GA4) -->
@@ -54,7 +54,7 @@
                     <a href="#pricing" class="text-gray-600 hover:text-cyan-600 font-semibold transition">Tarifs</a>
                     <a href="#faq" class="text-gray-600 hover:text-cyan-600 font-semibold transition">Questions</a>
                 </div>
-                <a href="https://tontine-pour-tous-c240hyfhi-ananfack-williams-projects.vercel.app/" target="_blank" class="bg-cyan-600 text-white px-6 py-2.5 rounded-full font-bold hover:bg-cyan-700 transition shadow-md text-xs sm:text-sm">
+                <a href="https://tontine-pour-tous.vercel.app/" target="_blank" class="bg-cyan-600 text-white px-6 py-2.5 rounded-full font-bold hover:bg-cyan-700 transition shadow-md text-xs sm:text-sm">
                     Accès Application
                 </a>
             </div>
@@ -72,7 +72,7 @@
                     L'outil complet pour les présidents : rapports <strong>complets et instantanés</strong> à partager sur WhatsApp ou à imprimer pour vos membres.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center lg:justify-start gap-5">
-                    <a href="https://tontine-pour-tous-c240hyfhi-ananfack-williams-projects.vercel.app/" target="_blank" class="bg-yellow-400 text-cyan-900 px-10 py-5 rounded-2xl font-bold text-xl hover:bg-yellow-300 transition-all transform hover:scale-105 shadow-xl">
+                    <a href="https://tontine-pour-tous.vercel.app/" target="_blank" class="bg-yellow-400 text-cyan-900 px-10 py-5 rounded-2xl font-bold text-xl hover:bg-yellow-300 transition-all transform hover:scale-105 shadow-xl">
                         Démarrer Gratuitement
                     </a>
                     <a href="#install" class="bg-white/10 backdrop-blur-sm border border-white/20 px-10 py-5 rounded-2xl font-bold text-xl hover:bg-white/20 transition text-sm">
@@ -120,8 +120,8 @@
                 </div>
             </div>
             
-            <div class="mt-16">
-                <a href="https://tontine-pour-tous-c240hyfhi-ananfack-williams-projects.vercel.app/" target="_blank" class="text-cyan-600 font-bold hover:underline decoration-2 underline-offset-8">
+            <div class="mt-16 text-center">
+                <a href="https://tontine-pour-tous.vercel.app/" target="_blank" class="text-cyan-600 font-bold hover:underline decoration-2 underline-offset-8">
                     Prêt à commencer ? Créez votre compte maintenant <i class="fas fa-arrow-right ml-2"></i>
                 </a>
             </div>
@@ -314,7 +314,7 @@
                         <li><i class="fas fa-check text-cyan-600 mr-2"></i> Jusqu'à 10 membres</li>
                         <li><i class="fas fa-check text-cyan-600 mr-2"></i> Gestion des cotisations</li>
                     </ul>
-                    <a href="https://tontine-pour-tous-c240hyfhi-ananfack-williams-projects.vercel.app/" target="_blank" class="block bg-gray-100 text-gray-800 py-4 rounded-2xl font-bold hover:bg-gray-200 transition text-center">Démarrer</a>
+                    <a href="https://tontine-pour-tous.vercel.app/" target="_blank" class="block bg-gray-100 text-gray-800 py-4 rounded-2xl font-bold hover:bg-gray-200 transition text-center">Démarrer</a>
                 </div>
                 <div class="bg-cyan-50 border-4 border-cyan-600 rounded-[3rem] p-12 relative shadow-xl">
                     <div class="absolute top-0 right-0 bg-cyan-600 text-white px-8 py-2 text-xs font-bold rounded-bl-3xl uppercase">Populaire</div>
@@ -325,7 +325,7 @@
                         <li><i class="fas fa-check text-cyan-600 mr-2"></i> Membres illimités</li>
                         <li><i class="fas fa-check text-cyan-600 mr-2"></i> Rapports et impressions illimités</li>
                     </ul>
-                    <a href="https://tontine-pour-tous-c240hyfhi-ananfack-williams-projects.vercel.app/" target="_blank" class="block bg-cyan-600 text-white py-4 rounded-2xl font-bold hover:bg-cyan-700 shadow-xl transition transform hover:scale-105 text-center">Essayer PRO</a>
+                    <a href="https://tontine-pour-tous.vercel.app/" target="_blank" class="block bg-cyan-600 text-white py-4 rounded-2xl font-bold hover:bg-cyan-700 shadow-xl transition transform hover:scale-105 text-center">Essayer PRO</a>
                 </div>
             </div>
         </div>
